# EarlyFT_QPE

./: README.md  pyproject.toml  setup.py
eftqpe/: MSQPE.py  SinQPE.py  simulate.py  thc_resources.py  utils.py
eftqpe/physical_costing/: __init__.py  ancillary_cost.py  circuit_division_SinQPE.py  fermi_hubbard.py  ftqc_SinQPE.py
eftqpe/physical_costing/thc/: __init__.py  loading.py  logical_costing.py
notebooks/: README.md  conftest.py  costing_plots_manuscript.ipynb  fermi_hubbard_costing.ipynb  figstyle.mplstyle  test_generate_thc_costing.py  test_generate_thc_data.py  thc_costing.ipynb
notebooks/data/physical_costs/: fermi_hubbard_multicircuit_long_run.csv  fermi_hubbard_multicircuit_short_run.csv
notebooks/data/thc/: H2O.npz  anthracene_thc_14_7_7_80.npz  h2o_thc_6_4_4_30.npz  n2_thc_6_3_3_30.npz  naphthalene_thc_10_5_5_45.npz
notebooks/data/thc/co_salophen_integrals/: integrals_a-S12_26_27.npz
notebooks/data/thc/resources/: a-S12-large.h5  anthracene.h5  h2o.h5  n2.h5  naphthalene.h5
