[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eftqpe"
version = "0.1.0"
description = "Tools for Early Fault-tolerant Quantum Phase Estimation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "" }
authors = [
    { name = "Stefano Polla", email = "polla@lorentz.leidenuniv.nl" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "qualtran==0.4.1",
    "tqdm==4.66.4",
    "seaborn==0.13.2",
    "scipy==1.12.0",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "matplotlib==3.9.0",
    "tables==3.10.1"
]

[project.optional-dependencies]
extras = [
    "pyscf",
    "openfermion @ git+https://github.com/quantumlib/OpenFermion.git@master",
    "jax",
]

[project.urls]
Homepage = "https://github.com/StefanoPolla/EarlyFT_QPE"

[tool.setuptools]
packages = ["eftqpe"]
